# demo_rpg

./: .gitignore  CMakeLists.txt  readme.md
demo_rpg/: CMakeLists.txt  buff.cpp  corestats.cpp  item.cpp  item_manager.cpp  playableclasses_fwd.h  playercharacter.cpp  pointwell.cpp  potion.cpp  random.cpp  statblock.cpp  warrior.cpp
demo_rpg/include/: armor.h  buff.h  cleric.h  corestats.h  item.h  item_manager.h  monster.h  playercharacter.h  pointwell.h  potion.h  random.h  rogue.h  statblock.h  types.h  warrior.h  weapon.h  wizard.h
googletest/docs/: gmock_cook_book.md
googletest/googlemock/include/gmock/: gmock-actions.h
googletest/googlemock/test/: gmock-actions_test.cc
googletest/googletest/include/gtest/internal/: gtest-port.h
googletest/googletest/src/: gtest.cc
rpgprototype/: CMakeLists.txt  main.cpp  pch.h
tests/: CMakeLists.txt  ExampleTests.cpp  ExampleTests.h
